# Test-CPPLib

./: .gitignore  .yaml-lint.yml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  test.cpp  vcpkg.json
.github/workflows/: build.yaml  cmake.yaml  super-linter.yml
headers/: DLLExport.h  TestMath.h
include/: DLLExport.h  TestMath.h
scripts/: linux.nuspec  publish_nuget.py  windows.nuspec
src/: TestMath.cpp
tests/src/: test.cpp
